--- a/src/app/heroes/pages/new-page/new-page.component.html
+++ b/src/app/heroes/pages/new-page/new-page.component.html
@@ -1,6 +1,6 @@
 <h1>
-    Editar/Agregar héroe
-    <small>Superman</small>
+    {{ currentHero.id ? 'Editar' : 'Agregar'}}
+    héroe
 </h1>
 
 <mat-divider class="mb-2"></mat-divider>
@@ -9,59 +9,50 @@
     <div class="col-12 sm:col-6">
         <mat-card>
             <mat-card-content>
-                <div class="grid">
+                <form class="grid" [formGroup]="heroForm" (ngSubmit)="onSubmit()">
                     <mat-form-field class="col-12 sm:col-6">
                         <mat-label>Super héroe</mat-label>
-                        <input 
-                            matInput
-                            type="text"
-                            required>
+                        <input matInput type="text" required formControlName="superhero">
                     </mat-form-field>
                     <mat-form-field class="col-12 sm:col-6">
                         <mat-label>Alter Ego</mat-label>
-                        <input 
-                            matInput
-                            type="text"
-                            required>
+                        <input matInput type="text" required formControlName="alter_ego">
                     </mat-form-field>
                     <mat-form-field class="col-12">
                         <mat-label>Primera Aparición</mat-label>
-                        <input 
-                            matInput
-                            type="text"
-                            required>
+                        <input matInput type="text" required formControlName="first_appearance">
                     </mat-form-field>
                     <mat-form-field class="col-12">
                         <mat-label>Personajes</mat-label>
-                        <input 
-                            matInput
-                            type="text"
-                            required>
+                        <input matInput type="text" required formControlName="characters">
                     </mat-form-field>
                     <mat-form-field class="col-12">
                         <mat-label>Creador</mat-label>
-                        <mat-select required="">
+                        <mat-select required="" formControlName="publisher">
                             @for( publish of publishers; track publish.id){
-                              <mat-option [value]="publish.id">
+                            <mat-option [value]="publish.id">
                                 {{publish.desc}}
-                              </mat-option>  
-                            }                   
+                            </mat-option>
+                            }
                         </mat-select>
                     </mat-form-field>
-                </div>
+                    <mat-form-field class="col-12">
+                        <mat-label>Imagen Alternativa</mat-label>
+                        <input matInput type="text"  formControlName="alt_img">
+                    </mat-form-field>
+                </form>
                 <div class="flex justify-content-around">
-                    <button
-                    mat-flat-button
-                    color="warn"
-                    >
-                    <mat-icon>deleted</mat-icon>
+                    @if(currentHero.id){
+                    <button mat-flat-button 
+                        color="warn"
+                        (click)="onDeleteHero()">
+                        <mat-icon>deleted</mat-icon>
                         Borrar
                     </button>
-                    <button
-                    mat-flat-button
-                    color="primary"
-                    >
-                    <mat-icon>save</mat-icon>
+                    }
+
+                    <button mat-flat-button color="primary" (click)="onSubmit()">
+                        <mat-icon>save</mat-icon>
                         Guardar
                     </button>
                 </div>
@@ -69,6 +60,6 @@
         </mat-card>
     </div>
     <div class="col-12 sm:col-6">
-        <img src="" alt="Imagen del nuevo héroe">
+        <img [src]="currentHero | heroImage " alt="Imagen del nuevo héroe" mat-card-image>
     </div>
 </div>
